# LLM-Endpoints

./: README.md  pyproject.toml  setup.py
llm-api-venv/: pyvenv.cfg
model-documentation/: google-gemini.md  open-ai.md
src/: main.py  openai-api.py
src/api/: gemini_api.py  openai_api.py
